individualConfig を実装。WalkAgent まで。 emptySpeed と、mentalMode を取り込む。
ただし、emptySpeed を小さくし過ぎると、socialForce に比べ小さくなりすぎ、すぐに停滞する可能性がありそう。

解決策としては、social force を、emptySpeed でスケールしておくのはどうか。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -244,6 +244,16 @@ run3gt00a_cui ::
 	(cd $(BASEDIR) ; time bash quickstart.sh -l Info --cui $(SAMPLE3gt00a))
 
 ##-----
+SAMPLE3gt00i = sample/generatedTown/gridTown00.indivConf.prop.json   # array formula
+run3gt00i ::
+	(cd $(BASEDIR) ; bash quickstart.sh -l Info $(SAMPLE3gt00i))
+#	(cd $(BASEDIR) ; bash quickstart.sh -l Warn $(SAMPLE3gt00i))
+
+
+run3gt00a_cui ::
+	(cd $(BASEDIR) ; time bash quickstart.sh -l Info --cui $(SAMPLE3gt00a))
+
+##-----
 SAMPLE3gt00r = sample/generatedTown/gridTown00.ruby.prop.json   # ruby agent
 run3gt00r ::
 	(cd $(BASEDIR) ; bash quickstart.sh -l Info --use-2d-simulator $(SAMPLE3gt00r))
