issue #204 シミュレーションビューアの Agent 表示機能を分離してモジュール化した。
Agent appearance ファイルを読んで表示方法の設定をおこなう機能を追加した。

--- a/.gitignore
+++ b/.gitignore
@@ -25,14 +25,20 @@ GuiSimulationLauncher.ini
 # execution result data
 tick.txt
 
+# cache files
+crowdwalk/cache/*
+
+# javadoc files
+crowdwalk/doc/javadoc/*
+
 # screen shots
-netmas/screenshots/*
+crowdwalk/screenshots/*
 
 # log files
-netmas/log/*
+crowdwalk/log/*
 
 # temporary files
-netmas/tmp/*
+crowdwalk/tmp/*
 
 # vim plugin
 .vimsessions/
