2D シミュレーションビューア用に、進行方向を向いて進む三角形のエージェントを作成した。
設定方法：
    "className" : "TriangleAgent"

--- a/crowdwalk/src/main/resources/agent_appearance_classes.json
+++ b/crowdwalk/src/main/resources/agent_appearance_classes.json
@@ -2,6 +2,7 @@
     "SpeedModel" : "nodagumi.ananPJ.Gui.AgentAppearance.model.SpeedModel",
     "RoundAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.RoundAgent",
     "SquareAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.SquareAgent",
+    "TriangleAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.TriangleAgent",
     "SphereAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.SphereAgent",
     "CubeAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.CubeAgent"
 }
