3D シミュレーションビューア用に、進行方向を向いて進む平面三角形のエージェントを作成した。
横から見るとただの線になってしまうので注意。
設定方法：
    "className" : "PlaneTriangleAgent"

--- a/crowdwalk/src/main/resources/agent_appearance_classes.json
+++ b/crowdwalk/src/main/resources/agent_appearance_classes.json
@@ -4,5 +4,6 @@
     "SquareAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.SquareAgent",
     "TriangleAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.TriangleAgent",
     "SphereAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.SphereAgent",
-    "CubeAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.CubeAgent"
+    "CubeAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.CubeAgent",
+    "PlaneTriangleAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.PlaneTriangleAgent"
 }
