国土交通省の海岸線データを利用してGUIシミュレータの画面上に海面を表示する機能を追加した。
使用方法は Wiki の "海面表示機能の使い方" 参照。
3D シミュレータの camera 機能で視点が360度回転してしまうバグを修正した。

--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     compile 'org.osgeo:proj4j:0.1.0'
     compile 'math.geom2d:javaGeom:0.11.1'
     compile 'com.opencsv:opencsv:3.8'
+    // https://mvnrepository.com/artifact/org.orbisgis/poly2tri-core
+    compile group: 'org.orbisgis', name: 'poly2tri-core', version: '0.1.2'
+    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
 
 sourceSets {
