--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     compile 'net.arnx:jsonic:1.3.10'
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'junit:junit:4.12'
-    compile 'org.jruby:jruby:9.+'
+    // https://mvnrepository.com/artifact/org.jruby/jruby-complete
+    compile group: 'org.jruby', name: 'jruby-complete', version: '9.1.15.0'
     compile 'org.osgeo:proj4j:0.1.0'
     compile 'math.geom2d:javaGeom:0.11.1'
     compile 'com.opencsv:opencsv:3.8'
