--- a/crowdwalk/src/main/resources/node_appearance.json
+++ b/crowdwalk/src/main/resources/node_appearance.json
@@ -1,25 +1,36 @@
 /*
-Usable color names:
-    BLACK, BLACK2, GRAY, GRAY2, LIGHTGRAY, RED, GREEN, BLUE, DARKBLUE,
-    LIGHTBLUE, SLATEBLUE, TURQUOISE, YELLOW, WHITE, PINK, LIGHTB, APINK,
-    ALIGHTB, ARED, PURPLE, PRED,
-    BACKGROUND_3D_COLOR, DEFAULT_LINK_COLOR, DEFAULT_AGENT_COLOR
-
-・設定の仕方
-
-    タグ名: {
-        diameter: 直径,
-        color: '色',
-        transparency: 透明度(1.0 で完全に透明)
-    },
-
-・タグ名にハイフン(-)を含む場合はシングルクォートまたはダブルクォートで囲むこと。
-・最後の要素の後にカンマ(,)をつけてはならない。
+    設定方法: https://github.com/crest-cassia/CrowdWalk/wiki/Node-appearance-%E3%81%AE%E8%A8%AD%E5%AE%9A%E6%96%B9%E6%B3%95
 */
-{
-    EXIT: {
-        diameter: 2.0,
-        color: 'BLACK2',
-        transparency: 0.7
+[
+    {
+        "tag" : "EXIT",
+        "2D_View" : {
+            "className" : "RoundNode2D",
+            "parameters" : {
+                "diameter" : 2.0,
+                "color" : "BLACK2",
+                "transparency" : 0.7
+            }
+        },
+        "3D_View" : {
+            "className" : "RoundNode3D",
+            "parameters" : {
+                "diameter" : 2.0,
+                "height" : 0.1,
+                "color" : "BLACK2",
+                "transparency" : 0.65
+            }
+        }
+    },
+    {
+        "tag" : "*",
+        "2D_View" : {
+            "className" : "InvisibleNode2D",
+            "parameters" : {}
+        },
+        "3D_View" : {
+            "className" : "InvisibleNode3D",
+            "parameters" : {}
+        }
     }
-}
+]
