Agent appearance のエージェント形状に TriangleMeshAgent(ユーザー定義のポリゴンエージェント) を追加した。

--- a/crowdwalk/src/main/resources/agent_appearance_classes.json
+++ b/crowdwalk/src/main/resources/agent_appearance_classes.json
@@ -5,5 +5,6 @@
     "TriangleAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.TriangleAgent",
     "SphereAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.SphereAgent",
     "CubeAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.CubeAgent",
-    "PlaneTriangleAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.PlaneTriangleAgent"
+    "PlaneTriangleAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.PlaneTriangleAgent",
+    "TriangleMeshAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view3d.TriangleMeshAgent"
 }
