シミュレータにマップデータの検証機能を追加した。
コマンドラインで -V(--validate) オプションを指定するか、プロパティファイルで "validate" を true に設定すると機能する。
マップデータに問題があればメッセージを表示して終了する。

CUI シミュレータ専用のビルドに対応していなかったため修正した。
マップエディタの "duplicate links" という表現を "duplicated links" に改めた。

--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -18,6 +18,11 @@ apply plugin: 'eclipse'
 //sourceCompatibility = '1.6' ;
 
 def javaVersion = new Double(sourceCompatibility.toString())
+
+/**
+ *  CUI シミュレータ専用版にするフラグ
+ *  gradle -Pcui=true で true になる
+ */
 def onlyCuiSimulator = cui.toBoolean()
 
 println "javaVersion ${javaVersion}"
