リンクの個別スピードに異方性入れた。 fallback の "link"/"speedRestrictRule" のあたりに "directed" : true を入れ、 "factor" に配列でparameterを与える。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -368,6 +368,10 @@ SAMPLE5loop0 = sample/generatedTown/gridTown01s.prop.json   # stay loop
 run5loop0 ::
 	(cd $(BASEDIR) ; cd `dirname $(SAMPLE5loop0)` ; time -p bash ../../quickstart.sh --log-level Info `basename $(SAMPLE5loop0)`)
 
+##-----
+SAMPLE_G4 = sample/generatedTown/gridTown04.prop.json   # directed restricted speed rules
+runG4 ::
+	(cd $(BASEDIR) ; cd `dirname $(SAMPLE_G4)` ; time -p bash ../../quickstart.sh --log-level Info `basename $(SAMPLE_G4)`)
 
 
 
